2005-02-18  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/gimpdrawable-convert.[ch]: new files holding 
	gimp_drawable_convert_rgb() and gimp_drawable_convert_grayscale()
	moved out of gimpimage-convert.[ch].

	* app/core/gimpchannel.c
	* app/core/gimpimage-convert.[ch]
	* app/core/gimplayer.c: changed accordingly.

2005-02-18  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: some simple loop unrolling,
	converted tabs to spaces and sprinkled the code with const
	qualifiers.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrenderergradient.c
	(gimp_view_renderer_gradient_render): don't attempt to read beyond
	the pre-calculated render buffers, even if the gradient somehow
	has out-of-bounds values. Fixes the crash reported in bug #167604.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.c: fixed the build for compilers that
	don't support C99 extensions.

2005-02-16  Kevin Cozens  <kcozens@cvs.gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: Added constants MIN-IMAGE-SIZE,
	MAX-IMAGE-SIZE, MIN-RESOLUTION, and MAX-RESOLUTION for use in Script-Fu
	scripts. See comment #4 in bug #167529.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	* libgimpwidgets/gimpintcombobox.c: set the "ellipsize" property
	on the text cell-renderer. Not sure if it's a good idea to
	hardcode this for GimpIntComboBox, but let's give it a try. Fixes
	bug #136676.

2005-02-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/gimp-help-lookup.c: use GOptionContext to parse
	the command-line.

2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-processor.c: switched to using a thread pool.
	Enables the progress callback for the threaded case.

2005-02-16  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/plug-ins/script-fu/scripts/guides-new.scm:  committted
	slightly modified patch from  Joao S. O. Bueno Calligaris
	to raise guide position limit to 262144.
	