@@ -1,3 +1,9 @@
+2005-02-18  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimpexport.c (export_dialog): applied patch from Patrice
+	Tremblay which sets an alternative button order for the export
+	dialog (bug #166678).
+
 2005-02-18  Sven Neumann  <sven@gimp.org>
 
 	* app/core/Makefile.am
